fixed design look of character card spacing and added more logic to my components

--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -3,11 +3,12 @@
   flex-direction: column;
   align-items: center;
   transition: all .275s ease-in-out;
+  padding: 10px;
 }
 
 .image {
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   border: 4px solid transparent;
   border-radius: 50%;
   transition: all .275s ease-in-out;
@@ -17,13 +18,13 @@
 
 .image:hover {
   border-color: #d8dadde0;
-  transform: scale(1.05);
+  transform: scale(1.1);
 }
 
 .name {
   color: #ffffff;
   font-family: Brandon;
-  font-size: .95em;
+  font-size: .9em;
   padding-top: 1.25em;
 }
 
