--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -7,11 +7,11 @@
 }
 
 .main-container {
-  border: 1px solid #ffffff;
-  width: 90%;
-  height: 500px;
+  width: fit-content;
+  height: 600px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
   justify-items: center;
   align-items: center;
 }
