--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -5,6 +5,7 @@
   padding: 1em 0;
   text-align: center;
   color: #ffffff;
+  user-select: none;
 }
 
 .nav-title {
