--- a/src/css/Scoreboard.css
+++ b/src/css/Scoreboard.css
@@ -13,4 +13,5 @@
   justify-content: space-evenly;
   align-items: center;
   color: #ffffff;
+  user-select: none;
 }
